Refactor: 러닝 레코드 Repository 리팩터링 (#297)
* Rename: findTotalDistanceMeterByMemberId 메소드명을 findTotalDistanceMeterByMemberIdWithRangeDate로 변경

* Fix: warning 제거(get(0) replace to getFirst())

* Style: 리파지 토리 함수 순서 변경 (find -> has -> save -> delete 순)

* Rename: 메소드명 변경 (findAvgDistanceMeterByMemberIdAndDateRange -> findAvgDistanceMeterByMemberIdWithDateRange)

* Rename: 메소드명 변경 ByDateRange 또는 AndDateRange 접미사를 WithDateRange로 변경하기

* Style: RepositoryImpl 순서 변경(조회 -> update -> save -> delete 순으로, 그 안에서는 jpa -> jooq순으로)

* Feat: 사용자 id로 전체 러닝 거리 합을 구하는 리파지토리 함수 추가

* Refactor: 회원 id + 기간으로 전체 회원의 러닝 거리를 조회 -> 회원아이디에 따라 전체 러닝 거리를 구하는 함수로 변경